Fix media query issues with h1 on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+/*-------------------------Google Fonts-------------------- */ 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 /*-------------------------General----------------------- */
 body {
     font-family: "Raleway", sans-serif;
     color: #161412;
+    padding-top: 3.125rem;
+}
+
+.container-fluid {
+    padding: 0;
 }
 
 /*-------------------------Header----------------------- */ 
 #logo {
-    height: 4rem;
+    height: 3rem;
 }
 
 .navbar {
-    padding-top: 0.5rem;
+    padding-top: .5rem;
     font-family: "Montserrat", sans-serif;
     font-size: 110%;
     font-weight: 500;
-    letter-spacing: 0.2rem;
+    letter-spacing: .2rem;
 }
 
 .navbar-brand {
@@ -38,12 +44,13 @@ body {
 
 .navbar-light .navbar-nav .nav-link:hover {
     color: #0C375A;
+    background-color: rgba(0,0,0,0.1);
 }
-
 .navbar-light .navbar-nav .nav-item .active {
     color: #0C375A; 
     font-weight: 600;    
 }
+
 /*-------------------------Hero Video-------------------- */ 
 #video-container {
     width: 100vw;
@@ -71,20 +78,18 @@ body {
     justify-content: center;
 }
 
-.slogan {
+#overlay h1 {
     font-family: "Montserrat", sans-serif;
     font-weight: 300;
-    letter-spacing: 0.2rem;
+    font-size: .75rem;
+    letter-spacing: .2rem;
     text-align: center;
     color: #ffffff;
-    border: 0.1rem solid #ffffff;
+    border: .1rem solid #ffffff;
     padding: 2rem 4rem;
 }
 
 /*-------------------------Home Page-------------------- */ 
-.container-fluid {
-    padding: 0;
-}
 .who-section {
     background-color: #0C375A;
     color: #ffffff;
@@ -95,7 +100,6 @@ body {
 .who-section p {
     font-size: 1.2rem;
 }
-
 .what-section {
     margin-right: 0;
 }
@@ -116,7 +120,7 @@ body {
 
 h2 {
     font-family: "Montserrat", sans-serif;
-    letter-spacing: 0.2rem;
+    letter-spacing: .2rem;
     padding-bottom: 1rem;
 }
 
@@ -129,13 +133,16 @@ h2 {
     padding: 2rem 1rem 2rem 2rem;
 }
 /*-------------------------About Page------------------- */ 
+#hero-image {
 
-/*----------------------Products Page----------------- */ 
+}
+
+
+/*--------------------Our Products Page----------------- */ 
 
 /*----------------------Contact Page-------------------- */ 
 
-/*-------------------------Footer----------------------- */ 
-
+/*-------------------------Footer----------------------- */
 .footer-section {
     color: #ffffff;
     background-color: #1F89E0;
@@ -147,7 +154,8 @@ h2 {
     font-family: "Montserrat", sans-serif;
     text-transform: uppercase;
     font-weight: 600;
-    letter-spacing: 0.2rem;  
+    letter-spacing: .2rem;
+    display: none; 
 }
 
 .footer-section a {
@@ -172,61 +180,68 @@ h2 {
 .footer-logo2 {
     height: 4rem;
     margin-top: 2rem;
-    padding-top: 0.5rem;
+    padding-top: .5rem;
 }
 
 .footer-copyright {
     font-size: 80%;
     font-weight: 100;
     padding-top: 2rem;
-    text-align: left;
+    text-align: center;
 }
 
 .footer-terms {
     font-size: 80%;
     font-weight: 600;
     padding-top: 2rem;
-    text-align: right;
+    text-align: center;
 }
 
-/*------------------Media Queries----------------------- */ 
-@media only screen and (max-width: 575px) {
-    .slogan {
-        font-size: 2rem;
-        padding: 2rem 1rem;
+/*-------------------------Media Queries-------------------- */ 
+@media only screen and (min-width: 360px) {
+    #overlay h1 {
+        font-size: 1.25rem;
     }
-    .footer-section h6 {
-        display: none;
-    }
-    .footer-copyright,
-    .footer-terms {
-        text-align: center;
+    #logo {
+        height: 4rem;
     }
 }
 
 @media only screen and (min-width: 576px) {
-     .footer-logo1 {
+    #overlay h1 {
+        font-size: 2rem;
+    }
+    .footer-section h6 {
+        display: block;
+    }
+    .footer-copyright {
+        text-align: left;
+    }
+    .footer-terms {
+        text-align: right;
+    }
+    .footer-logo1 {
          padding-right: 2rem;
-     }
-     .footer-logo2 {
+    }
+    .footer-logo2 {
          padding-left: 2rem;
-     }
- }
+    }
+}
 
- @media only screen and (max-width: 1258px) and (min-width: 992px) {
-     .footer-logo1 {
+@media only screen and (min-width: 992px) {
+    .navbar-light .navbar-nav .nav-link:hover {
+        background-color: #ffffff;
+    }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1258px) {
+    .footer-logo1 {
          height: 4.5rem;
          padding-right: 0;
-     }
-     .footer-logo2 {
+    }
+    .footer-logo2 {
          height: 3.5rem;
          padding-left: 0;
          margin-top: 1.5rem;
-     }
- }
-
- @media only screen and (max-width: 991px) {
-    .navbar-light .navbar-nav .nav-link:hover {
-        background-color: rgba(0,0,0,0.1);
     }
  }
